// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TS_JEST_LOG should pass and create log file when using tempalte "default" 1`] = `
Array [
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] creating Importer singleton",
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] checking version of jest: OK",
  "[level:20] created new transformer",
  "[level:20] computing cache key for <cwd>/Hello.spec.ts",
  "[level:30] no matching config-set found, creating a new one",
  "[level:20] backporting config",
  "[level:20] normalized jest config",
  "[level:20] normalized ts-jest config",
  "[level:20] babel is disabled",
  "[level:20] loaded module typescript",
  "[level:20] patching typescript",
  "[level:20] checking version of typescript: OK",
  "[level:20] readTsConfig(): reading <cwd>/tsconfig.json",
  "[level:20] normalized typescript config",
  "[level:20] processing <cwd>/Hello.spec.ts",
  "[level:20] creating typescript compiler (language service)",
  "[level:20] will use file caching",
  "[level:20] creating language service",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
  "[level:20] computing cache key for <cwd>/Hello.ts",
  "[level:20] processing <cwd>/Hello.ts",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
]
`;

exports[`TS_JEST_LOG should pass and create log file when using tempalte "with-babel-6" 1`] = `
Array [
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] creating Importer singleton",
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] checking version of jest: OK",
  "[level:20] created new transformer",
  "[level:20] computing cache key for <cwd>/Hello.spec.ts",
  "[level:30] no matching config-set found, creating a new one",
  "[level:20] backporting config",
  "[level:20] normalized jest config",
  "[level:20] normalized ts-jest config",
  "[level:20] loaded module babel-core",
  "[level:20] patching babel-core",
  "[level:20] checking version of babel-core: OK",
  "[level:30] patched babel-core/lib/transformation/file",
  "[level:20] normalized babel config",
  "[level:20] loaded module typescript",
  "[level:20] patching typescript",
  "[level:20] checking version of typescript: OK",
  "[level:20] readTsConfig(): reading <cwd>/tsconfig.json",
  "[level:20] normalized typescript config",
  "[level:20] processing <cwd>/Hello.spec.ts",
  "[level:20] creating babel-jest transformer",
  "[level:20] loaded module babel-core",
  "[level:20] loaded module babel-jest",
  "[level:20] patching babel-jest",
  "[level:20] checking version of babel-jest: OK",
  "[level:20] creating typescript compiler (language service)",
  "[level:20] will use file caching",
  "[level:20] creating language service",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
  "[level:20] calling babel-jest processor",
  "[level:20] computing cache key for <cwd>/Hello.ts",
  "[level:20] processing <cwd>/Hello.ts",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
  "[level:20] calling babel-jest processor",
]
`;

exports[`TS_JEST_LOG should pass and create log file when using tempalte "with-babel-7" 1`] = `
Array [
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] creating Importer singleton",
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] checking version of jest: OK",
  "[level:20] created new transformer",
  "[level:20] computing cache key for <cwd>/Hello.spec.ts",
  "[level:30] no matching config-set found, creating a new one",
  "[level:20] backporting config",
  "[level:20] normalized jest config",
  "[level:20] normalized ts-jest config",
  "[level:20] loaded module babel-core",
  "[level:20] patching babel-core",
  "[level:20] checking version of babel-core: OK",
  "[level:20] normalized babel config",
  "[level:20] loaded module typescript",
  "[level:20] patching typescript",
  "[level:20] checking version of typescript: OK",
  "[level:20] readTsConfig(): reading <cwd>/tsconfig.json",
  "[level:20] normalized typescript config",
  "[level:20] processing <cwd>/Hello.spec.ts",
  "[level:20] creating babel-jest transformer",
  "[level:20] loaded module babel-core",
  "[level:20] loaded module babel-jest",
  "[level:20] patching babel-jest",
  "[level:20] checking version of babel-jest: OK",
  "[level:20] creating typescript compiler (language service)",
  "[level:20] will use file caching",
  "[level:20] creating language service",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
  "[level:20] calling babel-jest processor",
  "[level:20] computing cache key for <cwd>/Hello.ts",
  "[level:20] processing <cwd>/Hello.ts",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
  "[level:20] calling babel-jest processor",
]
`;

exports[`TS_JEST_LOG should pass and create log file when using tempalte "with-jest-22" 1`] = `
Array [
  "[level:20] creating Importer singleton",
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] checking version of jest: OK",
  "[level:20] created new transformer",
  "[level:20] computing cache key for <cwd>/Hello.spec.ts",
  "[level:30] no matching config-set found, creating a new one",
  "[level:20] backporting config",
  "[level:20] normalized jest config",
  "[level:20] normalized ts-jest config",
  "[level:20] babel is disabled",
  "[level:20] loaded module typescript",
  "[level:20] patching typescript",
  "[level:20] checking version of typescript: OK",
  "[level:20] readTsConfig(): reading <cwd>/tsconfig.json",
  "[level:20] normalized typescript config",
  "[level:20] processing <cwd>/Hello.spec.ts",
  "[level:20] creating typescript compiler (language service)",
  "[level:20] will use file caching",
  "[level:20] creating language service",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
  "[level:20] computing cache key for <cwd>/Hello.ts",
  "[level:20] processing <cwd>/Hello.ts",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
]
`;

exports[`TS_JEST_LOG should pass and create log file when using tempalte "with-typescript-2-7" 1`] = `
Array [
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] creating Importer singleton",
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] checking version of jest: OK",
  "[level:20] created new transformer",
  "[level:20] computing cache key for <cwd>/Hello.spec.ts",
  "[level:30] no matching config-set found, creating a new one",
  "[level:20] backporting config",
  "[level:20] normalized jest config",
  "[level:20] normalized ts-jest config",
  "[level:20] babel is disabled",
  "[level:20] loaded module typescript",
  "[level:20] patching typescript",
  "[level:20] checking version of typescript: OK",
  "[level:20] readTsConfig(): reading <cwd>/tsconfig.json",
  "[level:20] normalized typescript config",
  "[level:20] processing <cwd>/Hello.spec.ts",
  "[level:20] creating typescript compiler (language service)",
  "[level:20] will use file caching",
  "[level:20] creating language service",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
  "[level:20] computing cache key for <cwd>/Hello.ts",
  "[level:20] processing <cwd>/Hello.ts",
  "[level:20] readThrough(): cache miss",
  "[level:20] getOutput(): compiling using language service",
  "[level:20] updateMemoryCache()",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] getOutput(): computing diagnostics",
  "[level:20] readThrough(): writing caches",
]
`;

exports[`With unsupported version test should pass using template "with-unsupported-version" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  ts-jest[versions] (WARN) Version 2.5.3 of typescript installed has not been tested with ts-jest. If you're experiencing issues, consider using a supported version (>=2.7.0 <4.0.0). Please do not report issues in ts-jest if you are using unsupported versions.
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;
